syntax = "proto3";

package people;

import "api/core/basic.proto";

service Address { rpc GetPrimaryAddress(core.Info) returns (PrimaryAddress); }

message PrimaryAddress { string value = 1; }